<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_world">Hello World!</string>
    <string name="settings">Settings</string>
    <string name="city_zipcode">zipcode</string>
</resources>
